--- a/index.html
+++ b/index.html
@@ -620,8 +620,7 @@ function read3Digits(n, hasHigherGroup){
 }
 
 function sendToGoogleSheets(invoice) {
-  const WEBAPP_URL = 'https://script.google.com/macros/s/AKfycbzSWbJ2TkpQhSvivioj4XghbmA_fLRF_CcghQRY38VAYXkixmbc8hMD0syZ5FrGmVtrsQ/exec
-';
+  const WEBAPP_URL = 'https://script.google.com/macros/s/AKfycbzSWbJ2TkpQhSvivioj4XghbmA_fLRF_CcghQRY38VAYXkixmbc8hMD0syZ5FrGmVtrsQ/exec';
   
   console.log('🔵 Bắt đầu gửi dữ liệu...');
   
